# PokeVertBazel

./: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel
src/main/java/es/zed/: MainVerticle.java
src/main/java/es/zed/application/: RespModel.java
src/main/java/es/zed/application/service/: ApiService.java
src/main/java/es/zed/domain/model/: PokemonObject.java
src/main/java/es/zed/domain/model/input/: ApiInputPort.java
src/main/java/es/zed/infrastructure/controller/: ApiController.java
src/main/java/es/zed/shared/: Constants.java
