load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_jvm_external",
    strip_prefix = "rules_jvm_external-5.3",
    urls = ["https://github.com/bazelbuild/rules_jvm_external/releases/download/5.3/rules_jvm_external-5.3.tar.gz"],
    sha256 = "d31e369b854322ca5098ea12c69d7175ded971435e55c18dd9dd5f29cc5249ac",
)

load("@rules_jvm_external//:defs.bzl", "maven_install")

maven_install(
    artifacts = [
        "io.vertx:vertx-core:4.2.0",
        "io.vertx:vertx-web:4.2.0",
        "io.vertx:vertx-web-client:4.2.0",
        "com.fasterxml.jackson.core:jackson-databind:2.18.1",
        "com.fasterxml.jackson.core:jackson-annotations:2.18.1",
    ],
    repositories = [
        "https://repo.maven.apache.org/maven2",
    ],
)
